--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,21 @@
 html {
   max-width: 100vw;
   overflow: hidden;
+  font-family: 
+}
+@media screen and (min-width: 980px) /* Desktop */ {
+  body {
+    background: red;
+  }
+}
+
+
+@media all and (max-device-width: 600px) {
+  
+    #right-column {
+      
+    float: none;
+    clear: both;
+    }
+  
 }
