--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,7 @@
 html {
   max-width: 100vw;
   overflow: hidden;
-  font-family: 
+   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
     #right-column {
