--- a/theme.css
+++ b/theme.css
@@ -5,6 +5,7 @@ html {
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+#left-column,
 #right-column {
   float: none;
   clear: both;
