--- a/theme.css
+++ b/theme.css
@@ -2,6 +2,8 @@
 html {
   max-width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #ffffff;
+  background-color: #222222;
 }
 
 body {
@@ -65,6 +67,10 @@ body {
 
 #middle > :first-child,
 #middle > :last-child {
+  display: none;
+}
+
+#ircchat {
   display: none;
 }
 
