--- a/theme.css
+++ b/theme.css
@@ -1,155 +1,173 @@
-@charset "UTF-8";
+//@import url("default.css");
+
 html {
-  max-width: 100vw;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #ffffff;
-  background-color: #222222;
+    max-width: 100vw;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #ffffff;
+    background-color: #222222;
 }
 
 body {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 #inner-container {
-  width: 600px;
-  display: flex;
-  flex-direction: column-reverse;
+    width: 600px;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 #header {
-  width: 100%;
-  height: auto;
-  padding: 24px 0;
-  position: relative;
-  background-color: #000000;
-  color: #ffffff;
-  font-size: 18px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-}
-#header a {
-  text-decoration: none;
-  color: #ffffff;
-}
-#header:before {
-  display: block;
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 0;
-  background-color: #333;
-  top: 0;
-  bottom: 0;
-  width: 100vw;
-  transform: translate(-50%, 0);
-}
-#header #account-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: none;
-}
-#header #header-logo {
-  display: none;
-}
-#header #header-navigation {
-  position: relative;
-  left: auto;
-  top: auto;
-  width: 100%;
-}
-#header #header-navigation > div {
-  padding: 0;
-  text-align: center;
-  display: block;
-  float: none;
-  padding: 0.5em;
+    //display: none;
+    width: 100%;
+    height: auto;
+    padding: 24px 0;
+    position: relative;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 18px;
+box-shadow: 0 0 10px rgba(#000, 0.4);
+    a {
+        text-decoration: none;
+        color: #ffffff
+    }
+
+    &:before {
+        display: block;
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 0;
+        background-color: #333;
+        top: 0;
+        bottom: 0;
+        width: 100vw;
+        transform: translate(-50%, 0);
+
+    }
+
+    #account-container {
+        position: absolute;
+        top: 0;
+        right: 0;
+        // À COMPLETER
+        display: none;
+    }
+
+    #header-logo {
+        display: none;
+    }
+
+    #header-navigation {
+        position: relative;
+        left: auto;
+        top: auto;
+        width: 100%;
+
+        >div {
+            padding: 0;
+            text-align: center;
+            display: block;
+            float: none;
+            padding: 0.5em;
+        }
+    }
 }
 
-#middle > :first-child,
-#middle > :last-child {
-  display: none;
-}
+#middle {
 
+    >:first-child,
+    >:last-child {
+        display: none;
+    }
+}
 #ircchat {
-  display: none;
+    display: none;
 }
-
 #left-column {
-  width: auto;
-  display: block !important;
-}
-#left-column > :first-child,
-#left-column > :last-child {
-  display: none;
-}
-#left-column #content-area {
-  display: block !important;
-}
-#left-column #game-navigation {
-  width: 250px;
-  position: fixed;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  left: auto;
-  right: 100%;
-  top: 48px;
-  bottom: 0;
-  background-color: #111;
-  overflow: auto;
-  font-size: 20px;
-  transition: all 0.2s;
-  margin: 0 !important;
-  float: none !important;
-}
-#left-column #game-navigation:hover, #left-column #game-navigation:focus, #left-column #game-navigation:focus-within {
-  right: calc(100% - 250px);
-}
-#left-column #game-navigation a {
-  text-decoration: none;
-  color: #ffffff;
-}
-#left-column #game-navigation a:before {
-  position: absolute;
-  left: 0.5em;
-}
-#left-column #game-navigation a[href*="/throne"]:before {
-  content: "👑";
-}
-#left-column #game-navigation a[href*="/kingdom_details"]:before {
-  content: "🏰";
-}
-#left-column #game-navigation .navigation > div {
-  display: block;
-  padding: 0.5em 0.5em 0.5em 1.5em;
-}
-#left-column #game-navigation .current-date {
-  -webkit-appearance: button;
-     -moz-appearance: button;
-          appearance: button;
-  cursor: pointer;
-  transform: translate(0, 0);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  z-index: 100;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #111;
-  height: 48px;
-  color: #ffffff;
-  line-height: 48px;
-  text-align: right;
-  padding-right: 58px;
-}
-#left-column #resource-bar,
-#left-column .game-header,
-#left-column .game-content {
-  display: none;
+    width: auto;
+    display: block !important;
+    >:first-child,
+    >:last-child {
+        display: none;
+    }
+
+    #content-area {
+         display: block !important;
+        
+    }
+    #game-navigation {
+        width: 250px;
+        position: fixed;
+        box-shadow: 0 0 10px rgba(#000,0.4);
+        left: auto;
+        right: 100%;
+        top: 48px;
+        bottom: 0;
+        background-color: #111;
+        overflow: auto;
+        font-size: 20px;
+        transition: all 0.2s;
+        margin: 0 !important;
+        float: none !important;
+&:hover,
+        &:focus,
+        &:focus-within {
+            right: calc(100% - 250px);
+        }
+         a {
+             text-decoration: none;
+             color: #ffffff
+         }
+         a:before {
+             position: absolute;
+             left: 0.5em;
+         }
+         a[href*="/throne"]:before {
+             content: '👑';
+         }
+          a[href*="/kingdom_details"]:before {
+              content: '🏰';
+          }
+          #enemylink:before {
+              content: '⚔️';
+          }
+        
+         .navigation {
+             >div {
+                 display: block;
+                 padding: 0.5em 0.5em 0.5em 1.5em;
+             }
+         }
+        .current-date {
+            appearance: button;
+            cursor: pointer;
+             transform: translate(0, 0);
+            box-shadow: 0 0 10px rgba(#000, 0.4);
+            z-index: 100;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background-color: #111;
+            height: 48px;
+            color: #ffffff;
+            line-height: 48px;
+            text-align: right;
+            padding-right: 58px;
+        }
+    }
+    #resource-bar,
+    .game-header,
+    .game-content {
+        display: none;
+    }
 }
 
 #right-column {
-  display: none;
+    display: none;
 }
 
 #footer {
-  display: none;
+    display: none;
 }
