--- a/theme.css
+++ b/theme.css
@@ -4,10 +4,12 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #ffffff;
   background-color: #222222;
+  width: 300px;
 }
 
 body {
   overflow: hidden;
+  width: 300px;
 }
 
 #inner-container {
