--- a/theme.css
+++ b/theme.css
@@ -4,15 +4,26 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #ffffff;
   background-color: #222222;
-  width: 980px;
+  width: 300px;
   margin: 0 auto;
   zoom: 1;
+}
+@media (min-width: 980px) and (max-width: 980px) {
+  html {
+    width: 980px;
+  }
 }
 
 body {
   overflow: hidden;
   width: 980px;
   margin: 0 auto;
+  width: 300px;
+}
+@media (min-width: 980px) and (max-width: 980px) {
+  body {
+    width: 980px;
+  }
 }
 
 #inner-container {
@@ -28,8 +39,15 @@ body {
   position: relative;
   background-color: #000000;
   color: #ffffff;
-  font-size: 58.8px;
-  box-shadow: 0 0 32.6666666667px rgba(0, 0, 0, 0.4);
+  font-size: 18px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+@media (min-width: 980px) and (max-width: 980px) {
+  #header {
+    padding: 78.4px 0;
+    font-size: 58.8px;
+    box-shadow: 0 0 32.6666666667px rgba(0, 0, 0, 0.4);
+  }
 }
 #header a {
   text-decoration: none;
@@ -94,9 +112,9 @@ body {
   display: block !important;
 }
 #left-column #game-navigation {
-  width: 816.6666666667px;
+  width: 250px;
   position: fixed;
-  box-shadow: 0 0 32.6666666667px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   left: auto;
   right: 100%;
   top: 156.8px;
@@ -108,8 +126,19 @@ body {
   margin: 0 !important;
   float: none !important;
 }
+@media (min-width: 980px) and (max-width: 980px) {
+  #left-column #game-navigation {
+    width: 816.6666666667px;
+    box-shadow: 0 0 32.6666666667px rgba(0, 0, 0, 0.4);
+  }
+}
 #left-column #game-navigation:hover, #left-column #game-navigation:focus, #left-column #game-navigation:focus-within {
-  right: calc(100% - 816px);
+  right: calc(100% - 250px);
+}
+@media (min-width: 980px) and (max-width: 980px) {
+  #left-column #game-navigation:hover, #left-column #game-navigation:focus, #left-column #game-navigation:focus-within {
+    right: calc(100% - 816px);
+  }
 }
 #left-column #game-navigation a {
   text-decoration: none;
@@ -138,18 +167,26 @@ body {
           appearance: button;
   cursor: pointer;
   transform: translate(0, 0);
-  box-shadow: 0 0 32.6666666667px rgba(0, 0, 0, 0.4);
   z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   background-color: #111;
-  height: 156.8px;
   color: #ffffff;
-  line-height: 156.8px;
   text-align: right;
-  padding-right: 189.4666666667px;
+  height: 48px;
+  line-height: 48px;
+  padding-right: 58px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+@media (min-width: 980px) and (max-width: 980px) {
+  #left-column #game-navigation .current-date {
+    height: 156.8px;
+    line-height: 156.8px;
+    padding-right: 189.4666666667px;
+    box-shadow: 0 0 32.6666666667px rgba(0, 0, 0, 0.4);
+  }
 }
 #left-column #resource-bar,
 #left-column .game-header,
