--- a/theme.css
+++ b/theme.css
@@ -77,7 +77,7 @@ body {
 }
 #header #header-logo {
   display: none;
-}
+}game-header
 #header #header-navigation-2nd-level,
 #header #header-navigation {
   position: relative;
