--- a/theme.css
+++ b/theme.css
@@ -7,9 +7,11 @@ html {
   width: 300px;
   margin: 0 auto;
   zoom: 1;
+  font-size: 20px;;
 }
 @media (max-device-width: 812px) {
   html {
+    font-size: 60px;
     width: 900px;
   }
 }
